<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amortizer</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Enter 3 items.\n \nLeave one item empty.\n \nThen press "Calculate".  \nScreen will update, showing missing value.</string>
    <string name="princlabel">Principal</string>
    <string name="ratelabel">Interest rate (%)</string>
    <string name="termlabel">term (months)</string>
    <string name="paymentlabel">monthly payment</string>
    <string name="button_calc">Calculate</string>
    <string name="princhint">50000.00</string>
    <string name="ratehint">4.5</string>
    <string name="termhint">120</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    

</resources>
